--- a/m_00.ipynb
+++ b/m_00.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9a2433d7",
+   "id": "301123ac",
    "metadata": {},
    "outputs": [
     {
@@ -160,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ade96a28",
+   "execution_count": 7,
+   "id": "ee744344",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m_00_01/m_00_01_pos1a.vhdr\n",
+      "Data file:  m_00_01/m_00_01_pos1a.vhdr\n",
       "Extracting parameters from m_00_01/m_00_01_pos1a.vhdr...\n",
       "Setting channel info structure...\n",
       "Reading 0 ... 1069219  =      0.000 ...  1069.219 secs...\n"
@@ -188,14 +188,21 @@
     }
    ],
    "source": [
+    "# Removed cached function import\n",
+    "import sys\n",
+    "try:\n",
+    "    del sys.modules['rename_events']\n",
+    "except AttributeError:\n",
+    "    pass\n",
     "from rename_events import relabel_events\n",
+    "\n",
     "relabel_events('m_00_01', 'pos1a')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a86ec0b",
+   "id": "023c681b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4f92e924",
+   "id": "6c70bca7",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ef60642",
+   "id": "6d9c0963",
    "metadata": {},
    "outputs": [],
    "source": []
