rename events code

--- a/m_00.ipynb
+++ b/m_00.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "301123ac",
+   "id": "1124a7db",
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,61 @@
    "outputs": [],
    "source": [
     "session_id='m_00_01'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9f21d4ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data file:  m_00_01/m_00_01_pos1a.vhdr\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:20: RuntimeWarning: No coordinate information found for channels ['ECG']. Setting channel types to misc. To avoid this warning, set channel types explicitly.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Used Annotations descriptions: ['New Segment/', 'Stimulus/S 10', 'Stimulus/S 20', 'Stimulus/S 30', 'Stimulus/S 40', 'Stimulus/S 50', 'Stimulus/S 51', 'Stimulus/S 60', 'Stimulus/S 70', 'Stimulus/S 80', 'Stimulus/S101', 'Stimulus/S109', 'Stimulus/S117']\n",
+      "Found '1a' in file: m_00_01/00_1a_posner_task_2023-04-05_15h00.59.401/00_1a_posner_task_2023-04-05_15h00.59.401.csv\n",
+      "Found '1b' in file: m_00_01/00_1b_posner_task_2023-04-05_16h08.54.140/00_1b_posner_task_2023-04-05_16h08.54.140.csv\n",
+      "********** 1a\n",
+      "m_00_01/00_1a_posner_task_2023-04-05_15h00.59.401/00_1a_posner_task_2023-04-05_15h00.59.401.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:20: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Removed cached function import\n",
+    "import sys\n",
+    "try:\n",
+    "    del sys.modules['rename_events']\n",
+    "except KeyError:\n",
+    "    pass\n",
+    "from rename_events import relabel_events\n",
+    "\n",
+    "relabel_events('m_00_01', 'pos1a')"
    ]
   },
   {
@@ -161,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee744344",
+   "id": "e23ca021",
    "metadata": {},
    "outputs": [
     {
@@ -187,22 +242,12 @@
      ]
     }
    ],
-   "source": [
-    "# Removed cached function import\n",
-    "import sys\n",
-    "try:\n",
-    "    del sys.modules['rename_events']\n",
-    "except AttributeError:\n",
-    "    pass\n",
-    "from rename_events import relabel_events\n",
-    "\n",
-    "relabel_events('m_00_01', 'pos1a')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "023c681b",
+   "id": "a8f11daf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6c70bca7",
+   "id": "74a62c10",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d9c0963",
+   "id": "95869ae4",
    "metadata": {},
    "outputs": [],
    "source": []
