new ica-ing, fixed m_02_02 stim count issue

--- a/m_03_02.ipynb
+++ b/m_03_02.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 20:16:25.829196\n"
+      "IMPORTED MODULES today: 2023-07-14 19:52:27.926792\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "061e20c2",
    "metadata": {},
    "outputs": [],
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -2127,13 +2127,7 @@
       "  [316] Keeping  (2023-05-04 12:21:47.056711+00:00 - 2023-05-04 12:21:47.056711+00:00 -> 554.584 - 554.584)\n",
       "  [317] Keeping  (2023-05-04 12:21:49.576711+00:00 - 2023-05-04 12:21:49.576711+00:00 -> 557.104 - 557.104)\n",
       "  [318] Keeping  (2023-05-04 12:21:49.676711+00:00 - 2023-05-04 12:21:49.676711+00:00 -> 557.204 - 557.204)\n",
-      "  [319] Keeping  (2023-05-04 12:21:52.057711+00:00 - 2023-05-04 12:21:52.057711+00:00 -> 559.585 - 559.585)\n",
-      "  [320] Keeping  (2023-05-04 12:21:53.556711+00:00 - 2023-05-04 12:21:53.556711+00:00 -> 561.084 - 561.084)\n",
-      "  [321] Keeping  (2023-05-04 12:21:56.247711+00:00 - 2023-05-04 12:21:56.247711+00:00 -> 563.775 - 563.775)\n",
-      "  [322] Keeping  (2023-05-04 12:21:56.347711+00:00 - 2023-05-04 12:21:56.347711+00:00 -> 563.875 - 563.875)\n",
-      "  [323] Keeping  (2023-05-04 12:21:58.567711+00:00 - 2023-05-04 12:21:58.567711+00:00 -> 566.095 - 566.095)\n",
-      "  [324] Keeping  (2023-05-04 12:22:00.066711+00:00 - 2023-05-04 12:22:00.066711+00:00 -> 567.594 - 567.594)\n",
-      "  [325] Keeping  (2023-05-04 12:22:03.856711+00:00 - 2023-05-04 12:22:03.856711+00:00 -> 571.384 - 571.384)\n"
+      "  [319] Keeping  (2023-05-04 12:21:52.057711+00:00 - 2023-05-04 12:21:52.057711+00:00 -> 559.585 - 559.585)\n"
      ]
     },
     {
@@ -2150,6 +2144,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  [320] Keeping  (2023-05-04 12:21:53.556711+00:00 - 2023-05-04 12:21:53.556711+00:00 -> 561.084 - 561.084)\n",
+      "  [321] Keeping  (2023-05-04 12:21:56.247711+00:00 - 2023-05-04 12:21:56.247711+00:00 -> 563.775 - 563.775)\n",
+      "  [322] Keeping  (2023-05-04 12:21:56.347711+00:00 - 2023-05-04 12:21:56.347711+00:00 -> 563.875 - 563.875)\n",
+      "  [323] Keeping  (2023-05-04 12:21:58.567711+00:00 - 2023-05-04 12:21:58.567711+00:00 -> 566.095 - 566.095)\n",
+      "  [324] Keeping  (2023-05-04 12:22:00.066711+00:00 - 2023-05-04 12:22:00.066711+00:00 -> 567.594 - 567.594)\n",
+      "  [325] Keeping  (2023-05-04 12:22:03.856711+00:00 - 2023-05-04 12:22:03.856711+00:00 -> 571.384 - 571.384)\n",
       "  [326] Keeping  (2023-05-04 12:22:03.956711+00:00 - 2023-05-04 12:22:03.956711+00:00 -> 571.484 - 571.484)\n",
       "  [327] Keeping  (2023-05-04 12:22:05.067711+00:00 - 2023-05-04 12:22:05.067711+00:00 -> 572.595 - 572.595)\n",
       "  [328] Keeping  (2023-05-04 12:22:06.567711+00:00 - 2023-05-04 12:22:06.567711+00:00 -> 574.095 - 574.095)\n",
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2282,7 @@
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.0s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.1s remaining:    0.0s\n"
      ]
     },
     {
@@ -2294,15 +2294,21 @@
       "Setting baseline interval to [-0.2, 0.0] s\n",
       "Applying baseline correction (mode: mean)\n",
       "0 projection items activated\n",
-      "Using data from preloaded Raw for 414 events and 701 original time points ...\n",
-      "5 bad epochs dropped\n"
+      "Using data from preloaded Raw for 414 events and 701 original time points ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.8s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 bad epochs dropped\n"
      ]
     }
    ],
@@ -2372,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2795,7 +2801,7 @@
       "  [409] Keeping  (2023-05-04 12:24:21.590711+00:00 - 2023-05-04 12:24:21.590711+00:00 -> 709.118 - 709.118)\n",
       "  [410] Keeping  (2023-05-04 12:24:24.085711+00:00 - 2023-05-04 12:24:24.085711+00:00 -> 711.613 - 711.613)\n",
       "Cropping complete (kept 411)\n",
-      "Fitting ICA took 54.5s.\n"
+      "Fitting ICA took 99.6s.\n"
      ]
     },
     {
@@ -2834,7 +2840,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 93 iterations on 696263 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2844,6 +2850,30 @@
     "ica_b = ICA(n_components=len(filt_raw_b.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f917b962",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2859,16 +2889,17 @@
       "Creating RawArray with float64 data, n_channels=63, n_times=696263\n",
       "    Range : 15351 ... 711613 =     15.351 ...   711.613 secs\n",
       "Ready.\n",
+      "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2f3ae7520>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2b614fac0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2876,6 +2907,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Not setting metadata\n",
+      "348 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Not setting metadata\n",
+      "348 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Not setting metadata\n",
+      "348 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
       "    Using multitaper spectrum estimation with 7 DPSS windows\n",
       "Not setting metadata\n",
       "348 matching events found\n",
@@ -2896,17 +2942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0]"
+       "[41, 42, 43, 44, 52, 24, 32, 0, 7, 16, 17]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2927,7 +2973,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 1 ICA component\n",
+      "    Zeroing out 11 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2936,10 +2982,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x294554940>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x17ce1d900>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2965,7 +3011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -2974,7 +3020,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_03_02/m_03_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_03_02/m_03_02_pos2b.vhdr\n",
+      "Overwriting existing file.\n"
      ]
     },
     {
@@ -2999,12 +3046,12 @@
     "   os.makedirs(session_dir)\n",
     "\n",
     "print(\"\\n**** Saving file to: \", session_dir+'/'+file_name_b) \n",
-    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1)"
+    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
