--- a/m_07_02.ipynb
+++ b/m_07_02.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 21:31:10.498819\n"
+      "IMPORTED MODULES today: 2023-07-14 18:33:47.086563\n"
      ]
     }
    ],
@@ -54,16 +54,6 @@
     "session_id='m_07_02'\n",
     "posner_id ='pos2a'\n",
     "posner_id_b ='pos2b'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "061e20c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
    ]
   },
   {
@@ -1378,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -2050,7 +2040,23 @@
       "  [223] Keeping  (2023-05-19 16:15:10.108500+00:00 - 2023-05-19 16:15:10.108500+00:00 -> 464.868 - 464.868)\n",
       "  [224] Keeping  (2023-05-19 16:15:11.878500+00:00 - 2023-05-19 16:15:11.878500+00:00 -> 466.638 - 466.638)\n",
       "  [225] Keeping  (2023-05-19 16:15:13.378500+00:00 - 2023-05-19 16:15:13.378500+00:00 -> 468.138 - 468.138)\n",
-      "  [226] Keeping  (2023-05-19 16:15:17.088500+00:00 - 2023-05-19 16:15:17.088500+00:00 -> 471.848 - 471.848)\n",
+      "  [226] Keeping  (2023-05-19 16:15:17.088500+00:00 - 2023-05-19 16:15:17.088500+00:00 -> 471.848 - 471.848)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [227] Keeping  (2023-05-19 16:15:17.188500+00:00 - 2023-05-19 16:15:17.188500+00:00 -> 471.948 - 471.948)\n",
       "  [228] Keeping  (2023-05-19 16:15:18.378500+00:00 - 2023-05-19 16:15:18.378500+00:00 -> 473.138 - 473.138)\n",
       "  [229] Keeping  (2023-05-19 16:15:19.878500+00:00 - 2023-05-19 16:15:19.878500+00:00 -> 474.638 - 474.638)\n",
@@ -2223,23 +2229,7 @@
       "  [396] Keeping  (2023-05-19 16:20:03.699500+00:00 - 2023-05-19 16:20:03.699500+00:00 -> 758.459 - 758.459)\n",
       "  [397] Keeping  (2023-05-19 16:20:03.800500+00:00 - 2023-05-19 16:20:03.800500+00:00 -> 758.56 - 758.56)\n",
       "  [398] Keeping  (2023-05-19 16:20:05.380500+00:00 - 2023-05-19 16:20:05.380500+00:00 -> 760.14 - 760.14)\n",
-      "  [399] Keeping  (2023-05-19 16:20:06.880500+00:00 - 2023-05-19 16:20:06.880500+00:00 -> 761.64 - 761.64)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [399] Keeping  (2023-05-19 16:20:06.880500+00:00 - 2023-05-19 16:20:06.880500+00:00 -> 761.64 - 761.64)\n",
       "  [400] Keeping  (2023-05-19 16:20:09.500500+00:00 - 2023-05-19 16:20:09.500500+00:00 -> 764.26 - 764.26)\n",
       "  [401] Keeping  (2023-05-19 16:20:09.600500+00:00 - 2023-05-19 16:20:09.600500+00:00 -> 764.36 - 764.36)\n",
       "  [402] Keeping  (2023-05-19 16:20:11.880500+00:00 - 2023-05-19 16:20:11.880500+00:00 -> 766.64 - 766.64)\n",
@@ -2265,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -2298,7 +2288,7 @@
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.0s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.1s remaining:    0.0s\n"
      ]
     },
     {
@@ -2318,7 +2308,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.6s finished\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
      ]
     }
    ],
@@ -2388,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2810,7 +2800,7 @@
       "  [408] Keeping  (2023-05-19 16:20:24.882500+00:00 - 2023-05-19 16:20:24.882500+00:00 -> 779.642 - 779.642)\n",
       "  [409] Keeping  (2023-05-19 16:20:27.261500+00:00 - 2023-05-19 16:20:27.261500+00:00 -> 782.021 - 782.021)\n",
       "Cropping complete (kept 410)\n",
-      "Fitting ICA took 52.7s.\n"
+      "Fitting ICA took 50.7s.\n"
      ]
     },
     {
@@ -2849,7 +2839,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 90 iterations on 678636 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2859,6 +2849,31 @@
     "ica_b = ICA(n_components=len(filt_raw_b.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9f045613",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%matplotlib qt\n",
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2880,10 +2895,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x296bb08b0>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2b67d4f70>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2891,6 +2906,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Not setting metadata\n",
+      "339 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
       "    Using multitaper spectrum estimation with 7 DPSS windows\n",
       "Not setting metadata\n",
       "339 matching events found\n",
@@ -2936,17 +2956,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3]"
+       "[24,\n",
+       " 26,\n",
+       " 25,\n",
+       " 20,\n",
+       " 37,\n",
+       " 38,\n",
+       " 39,\n",
+       " 40,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 46,\n",
+       " 45,\n",
+       " 53,\n",
+       " 50,\n",
+       " 56,\n",
+       " 48,\n",
+       " 0,\n",
+       " 1,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 9,\n",
+       " 8,\n",
+       " 7,\n",
+       " 13,\n",
+       " 6,\n",
+       " 5]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2957,7 +3004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2967,7 +3014,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 4 ICA components\n",
+      "    Zeroing out 28 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2976,10 +3023,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2839afc70>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2a19eae60>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3005,7 +3052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -3014,7 +3061,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_07_02/m_07_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_07_02/m_07_02_pos2b.vhdr\n",
+      "Overwriting existing file.\n"
      ]
     },
     {
@@ -3039,12 +3087,12 @@
     "   os.makedirs(session_dir)\n",
     "\n",
     "print(\"\\n**** Saving file to: \", session_dir+'/'+file_name_b) \n",
-    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1)"
+    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -3052,20 +3100,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_07_02\u001b[0m\n",
-      "├── m_07_02_pos2a.eeg\n",
-      "├── m_07_02_pos2a.vhdr\n",
-      "├── m_07_02_pos2a.vmrk\n",
-      "├── m_07_02_pos2b.eeg\n",
-      "├── m_07_02_pos2b.vhdr\n",
-      "└── m_07_02_pos2b.vmrk\n",
+      "[ 256]  \u001b[1;36m/Users/babe/src/gla/dissertation/go/cleaned/m_07_02\u001b[0m\n",
+      "├── [172M]  m_07_02_pos2a.eeg\n",
+      "├── [1.7K]  m_07_02_pos2a.vhdr\n",
+      "├── [ 12K]  m_07_02_pos2a.vmrk\n",
+      "├── [166M]  m_07_02_pos2b.eeg\n",
+      "├── [1.7K]  m_07_02_pos2b.vhdr\n",
+      "└── [ 12K]  m_07_02_pos2b.vmrk\n",
       "\n",
       "1 directory, 6 files\n"
      ]
     }
    ],
    "source": [
-    "!tree {session_dir}"
+    "!tree -lh {session_dir}"
    ]
   },
   {
@@ -3078,7 +3126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
