--- a/m_11_02.ipynb
+++ b/m_11_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "abc290bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-11 09:29:30.105555\n"
+      "IMPORTED MODULES today: 2023-07-14 18:55:37.637913\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "061e20c2",
    "metadata": {},
    "outputs": [],
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -2112,23 +2112,7 @@
       "  [223] Keeping  (2023-06-02 16:09:52.852701+00:00 - 2023-06-02 16:09:52.852701+00:00 -> 420.347 - 420.347)\n",
       "  [224] Keeping  (2023-06-02 16:09:54.892701+00:00 - 2023-06-02 16:09:54.892701+00:00 -> 422.387 - 422.387)\n",
       "  [225] Keeping  (2023-06-02 16:09:56.392701+00:00 - 2023-06-02 16:09:56.392701+00:00 -> 423.887 - 423.887)\n",
-      "  [226] Keeping  (2023-06-02 16:09:59.782701+00:00 - 2023-06-02 16:09:59.782701+00:00 -> 427.277 - 427.277)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [226] Keeping  (2023-06-02 16:09:59.782701+00:00 - 2023-06-02 16:09:59.782701+00:00 -> 427.277 - 427.277)\n",
       "  [227] Keeping  (2023-06-02 16:09:59.882701+00:00 - 2023-06-02 16:09:59.882701+00:00 -> 427.377 - 427.377)\n",
       "  [228] Keeping  (2023-06-02 16:10:01.392701+00:00 - 2023-06-02 16:10:01.392701+00:00 -> 428.887 - 428.887)\n",
       "  [229] Keeping  (2023-06-02 16:10:02.892701+00:00 - 2023-06-02 16:10:02.892701+00:00 -> 430.387 - 430.387)\n",
@@ -2164,7 +2148,23 @@
       "  [259] Keeping  (2023-06-02 16:10:51.162701+00:00 - 2023-06-02 16:10:51.162701+00:00 -> 478.657 - 478.657)\n",
       "  [260] Keeping  (2023-06-02 16:10:53.403701+00:00 - 2023-06-02 16:10:53.403701+00:00 -> 480.898 - 480.898)\n",
       "  [261] Keeping  (2023-06-02 16:10:54.902701+00:00 - 2023-06-02 16:10:54.902701+00:00 -> 482.397 - 482.397)\n",
-      "  [262] Keeping  (2023-06-02 16:10:58.522701+00:00 - 2023-06-02 16:10:58.522701+00:00 -> 486.017 - 486.017)\n",
+      "  [262] Keeping  (2023-06-02 16:10:58.522701+00:00 - 2023-06-02 16:10:58.522701+00:00 -> 486.017 - 486.017)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [263] Keeping  (2023-06-02 16:10:58.622701+00:00 - 2023-06-02 16:10:58.622701+00:00 -> 486.117 - 486.117)\n",
       "  [264] Keeping  (2023-06-02 16:10:59.903701+00:00 - 2023-06-02 16:10:59.903701+00:00 -> 487.398 - 487.398)\n",
       "  [265] Keeping  (2023-06-02 16:11:01.402701+00:00 - 2023-06-02 16:11:01.402701+00:00 -> 488.897 - 488.897)\n",
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -2373,21 +2373,15 @@
       "Setting baseline interval to [-0.2, 0.0] s\n",
       "Applying baseline correction (mode: mean)\n",
       "0 projection items activated\n",
-      "Using data from preloaded Raw for 415 events and 701 original time points ...\n"
+      "Using data from preloaded Raw for 415 events and 701 original time points ...\n",
+      "6 bad epochs dropped\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.9s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 bad epochs dropped\n"
+      "[Parallel(n_jobs=1)]: Done  63 out of  63 | elapsed:    0.7s finished\n"
      ]
     }
    ],
@@ -2457,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2880,7 +2874,7 @@
       "  [409] Keeping  (2023-06-02 16:14:59.335701+00:00 - 2023-06-02 16:14:59.335701+00:00 -> 726.83 - 726.83)\n",
       "  [410] Keeping  (2023-06-02 16:15:05.379701+00:00 - 2023-06-02 16:15:05.379701+00:00 -> 732.874 - 732.874)\n",
       "Cropping complete (kept 411)\n",
-      "Fitting ICA took 58.6s.\n"
+      "Fitting ICA took 81.3s.\n"
      ]
     },
     {
@@ -2919,7 +2913,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 102 iterations on 677000 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2930,6 +2924,30 @@
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "os.system(\"say -v 'Milena' 'YO LOUIE, the ICA IS FINISHED'\")\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "293bcbb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2945,16 +2963,17 @@
       "Creating RawArray with float64 data, n_channels=63, n_times=677000\n",
       "    Range : 55875 ... 732874 =     55.875 ...   732.874 secs\n",
       "Ready.\n",
+      "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x334d0bd00>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x29b56f370>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2962,6 +2981,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
+      "Not setting metadata\n",
+      "338 matching events found\n",
+      "No baseline correction applied\n",
+      "0 projection items activated\n",
       "    Using multitaper spectrum estimation with 7 DPSS windows\n",
       "Not setting metadata\n",
       "338 matching events found\n",
@@ -2992,17 +3016,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3]"
+       "[0, 1, 2, 3, 47, 20, 39, 27, 21, 5, 7, 13, 16]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3013,7 +3037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -3023,7 +3047,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 4 ICA components\n",
+      "    Zeroing out 13 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -3032,10 +3056,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x17f5e9630>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2e58e5120>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3061,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -3070,7 +3094,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_11_02/m_11_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_11_02/m_11_02_pos2b.vhdr\n",
+      "Overwriting existing file.\n"
      ]
     },
     {
@@ -3095,12 +3120,12 @@
     "   os.makedirs(session_dir)\n",
     "\n",
     "print(\"\\n**** Saving file to: \", session_dir+'/'+file_name_b) \n",
-    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1)"
+    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -3134,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
