--- a/m_15_02.ipynb
+++ b/m_15_02.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-11 10:36:08.722958\n"
+      "IMPORTED MODULES today: 2023-07-14 20:00:44.989655\n"
      ]
     }
    ],
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -2098,23 +2098,7 @@
       "  [261] Keeping  (2023-06-09 18:20:44.129011+00:00 - 2023-06-09 18:20:44.129011+00:00 -> 454.732 - 454.732)\n",
       "  [262] Keeping  (2023-06-09 18:20:44.229011+00:00 - 2023-06-09 18:20:44.229011+00:00 -> 454.832 - 454.832)\n",
       "  [263] Keeping  (2023-06-09 18:20:45.450011+00:00 - 2023-06-09 18:20:45.450011+00:00 -> 456.053 - 456.053)\n",
-      "  [264] Keeping  (2023-06-09 18:20:46.950011+00:00 - 2023-06-09 18:20:46.950011+00:00 -> 457.553 - 457.553)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  [264] Keeping  (2023-06-09 18:20:46.950011+00:00 - 2023-06-09 18:20:46.950011+00:00 -> 457.553 - 457.553)\n",
       "  [265] Keeping  (2023-06-09 18:20:50.589011+00:00 - 2023-06-09 18:20:50.589011+00:00 -> 461.192 - 461.192)\n",
       "  [266] Keeping  (2023-06-09 18:20:50.689011+00:00 - 2023-06-09 18:20:50.689011+00:00 -> 461.292 - 461.292)\n",
       "  [267] Keeping  (2023-06-09 18:20:51.960011+00:00 - 2023-06-09 18:20:51.960011+00:00 -> 462.563 - 462.563)\n",
@@ -2168,7 +2152,23 @@
       "  [315] Keeping  (2023-06-09 18:22:07.950011+00:00 - 2023-06-09 18:22:07.950011+00:00 -> 538.553 - 538.553)\n",
       "  [316] Keeping  (2023-06-09 18:22:10.580011+00:00 - 2023-06-09 18:22:10.580011+00:00 -> 541.183 - 541.183)\n",
       "  [317] Keeping  (2023-06-09 18:22:10.680011+00:00 - 2023-06-09 18:22:10.680011+00:00 -> 541.283 - 541.283)\n",
-      "  [318] Keeping  (2023-06-09 18:22:12.950011+00:00 - 2023-06-09 18:22:12.950011+00:00 -> 543.553 - 543.553)\n",
+      "  [318] Keeping  (2023-06-09 18:22:12.950011+00:00 - 2023-06-09 18:22:12.950011+00:00 -> 543.553 - 543.553)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  [319] Keeping  (2023-06-09 18:22:14.450011+00:00 - 2023-06-09 18:22:14.450011+00:00 -> 545.053 - 545.053)\n",
       "  [320] Keeping  (2023-06-09 18:22:17.500011+00:00 - 2023-06-09 18:22:17.500011+00:00 -> 548.103 - 548.103)\n",
       "  [321] Keeping  (2023-06-09 18:22:17.600011+00:00 - 2023-06-09 18:22:17.600011+00:00 -> 548.203 - 548.203)\n",
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "2750d696",
    "metadata": {},
    "outputs": [
@@ -2307,7 +2307,7 @@
       "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done   3 out of   3 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.1s remaining:    0.0s\n"
+      "[Parallel(n_jobs=1)]: Done   4 out of   4 | elapsed:    0.0s remaining:    0.0s\n"
      ]
     },
     {
@@ -2397,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "0f546211",
    "metadata": {},
    "outputs": [
@@ -2819,7 +2819,7 @@
       "  [408] Keeping  (2023-06-09 18:24:42.492011+00:00 - 2023-06-09 18:24:42.492011+00:00 -> 693.095 - 693.095)\n",
       "  [409] Keeping  (2023-06-09 18:24:44.347011+00:00 - 2023-06-09 18:24:44.347011+00:00 -> 694.95 - 694.95)\n",
       "Cropping complete (kept 410)\n",
-      "Fitting ICA took 37.1s.\n"
+      "Fitting ICA took 46.9s.\n"
      ]
     },
     {
@@ -2858,7 +2858,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 58 iterations on 687591 samples), 63 ICA components (63 PCA components available), channel types: eeg, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2868,6 +2868,30 @@
     "ica_b = ICA(n_components=len(filt_raw_b.ch_names)-1, max_iter=\"auto\", random_state=999)\n",
     "ica_b.fit(filt_raw_b, verbose='DEBUG')\n",
     "ica_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee983191",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 975x967 with 20 Axes>,\n",
+       " <MNEFigure size 585x260 with 3 Axes>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ica_b.plot_components()"
    ]
   },
   {
@@ -2889,10 +2913,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x3216f25f0>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2c79a3250>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2900,31 +2924,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "343 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "343 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "343 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "343 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
-      "    Using multitaper spectrum estimation with 7 DPSS windows\n",
-      "Not setting metadata\n",
-      "343 matching events found\n",
-      "No baseline correction applied\n",
-      "0 projection items activated\n",
       "    Using multitaper spectrum estimation with 7 DPSS windows\n",
       "Not setting metadata\n",
       "343 matching events found\n",
@@ -2950,17 +2949,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "6164e5fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1]"
+       "[41, 45, 50, 54, 39, 1, 0, 4, 6, 5, 15]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2971,7 +2970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "d2563097",
    "metadata": {},
    "outputs": [
@@ -2981,7 +2980,7 @@
      "text": [
       "Applying ICA to Raw instance\n",
       "    Transforming to ICA space (63 components)\n",
-      "    Zeroing out 1 ICA component\n",
+      "    Zeroing out 11 ICA components\n",
       "    Projecting back using 63 PCA components\n",
       "Using pyopengl with version 3.1.6\n",
       "Using pyopengl with version 3.1.6\n"
@@ -2990,10 +2989,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x31f190550>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2c5d21ab0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3019,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "c827991d",
    "metadata": {},
    "outputs": [
@@ -3028,7 +3027,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_15_02/m_15_02_pos2b.vhdr\n"
+      "**** Saving file to:  /Users/babe/src/gla/dissertation/go/cleaned/m_15_02/m_15_02_pos2b.vhdr\n",
+      "Overwriting existing file.\n"
      ]
     },
     {
@@ -3053,12 +3053,12 @@
     "   os.makedirs(session_dir)\n",
     "\n",
     "print(\"\\n**** Saving file to: \", session_dir+'/'+file_name_b) \n",
-    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1)"
+    "mne.export.export_raw(session_dir+'/'+file_name_b, reconstr_raw_b, verbose=1, overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "f7ba5405",
    "metadata": {},
    "outputs": [
@@ -3092,7 +3092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "1de1fbea",
    "metadata": {},
    "outputs": [],
